[gd_scene load_steps=18 format=3 uid="uid://bmq42e453ofa3"]

[ext_resource type="Texture2D" uid="uid://dt6x6ws2l6eym" path="res://world/props/traps/rock_head/assets/Blink (42x42).png" id="2_jc43i"]
[ext_resource type="Texture2D" uid="uid://bqyl8opgyo2qs" path="res://world/props/traps/rock_head/assets/Idle.png" id="2_odbbt"]
[ext_resource type="Texture2D" uid="uid://da142bo0jnlxd" path="res://world/props/traps/rock_head/assets/Bottom Hit (42x42).png" id="4_dfelh"]
[ext_resource type="PackedScene" uid="uid://btsxnkr4tggdk" path="res://components/hitbox/scene/hit_box.tscn" id="5_pmwtk"]
[ext_resource type="Script" uid="uid://dg5c517h2fy1p" path="res://world/props/traps/rock_head/script/rock_head.gd" id="5_tyvpt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dfelh"]
atlas = ExtResource("2_jc43i")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyvpt"]
atlas = ExtResource("2_jc43i")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmwtk"]
atlas = ExtResource("2_jc43i")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpqhi"]
atlas = ExtResource("2_jc43i")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc43i"]
atlas = ExtResource("2_odbbt")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1jdp"]
atlas = ExtResource("4_dfelh")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxepy"]
atlas = ExtResource("4_dfelh")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dvbi"]
atlas = ExtResource("4_dfelh")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpm08"]
atlas = ExtResource("4_dfelh")
region = Rect2(126, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_dfelh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfelh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyvpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmwtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpqhi")
}],
"loop": false,
"name": &"blink",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc43i")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1jdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxepy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dvbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpm08")
}],
"loop": false,
"name": &"hit_bottom",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmwtk"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyvpt"]
size = Vector2(34, 34)

[node name="RockHead" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("5_tyvpt")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dfelh")
animation = &"hit_bottom"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pmwtk")

[node name="RayCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, 1000)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]

[node name="HitBox" parent="." instance=ExtResource("5_pmwtk")]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_tyvpt")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="HitBox"]
